
2021-02-18  Ron Norman <rjn@inglenet.com>

	* V-ISAM is a reworked VB-ISAM that dynamically supports
		the old VB-ISAM file format as well as C-ISAM at runtime
	* common.h,common.c: Changes to replace VB-CISAM with V-ISAM
	* fileio.h,fileio.c: Changes to replace VB-CISAM with V-ISAM
	* Makefile.am,libcobvc.c: Changes to replace VB-CISAM with V-ISAM
	* fisam.c: Changes to replace VB-CISAM with V-ISAM
	         For OPEN OUTPUT and the file does exist, it checks on the file
			 format and retains that for the 'isbuild'

2021-02-17  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: If PIC 9 field in index had HIGH-VALUES set to all 9s
				cob_index_to_xfd is now passed 'cond' which 
				if COB_FI will set the index fields to lowest value and 
				if COB_LA will set the index fields to highest value
	* common.c: Add  'cob_get_env' to check for 'envname' then 'COB_envname'
	* fileio.c: Changed to use cob_get_env
				Changed to process IO_OPTIONS then IX/RL/SQ/LS_OPTIONS
				then IO_filename 
	* fodbc.c: Use indicator variable for adhoc SQL statements
				changed calls to cob_index_to_xfd
	* foci.c: changed calls to cob_index_to_xfd

2021-02-16  Ron Norman <rjn@inglenet.com>

	* common.h: Added COB_XFDT_COMP5IDX and COB_XFDT_COMP5REL
	* file.h: Added fields for the rid_tablename processing
	* fileio.c: Add 'dbase' flag for modules to indicate which are database
	           Added for IO_ or IX_ 'limit=num' where 'num' is the number of
			   rows to be read from the table with one SELECT
	* foci.c: Limit rows read at once by a SELECT and continue after
	* fodbc.c: Limit rows read at once by a SELECT and continue after
	* fsqlxfd.c: Changes for limit on rows read, handle sequence usage
			and some date conversion fixes

2021-02-13  Ron Norman <rjn@inglenet.com>

	* coblocal.h: Add 'cob_stop_run_commit' 
	* common.c: On STOP RUN either commit or rollback pending updates

2021-02-12  Ron Norman <rjn@inglenet.com>

	* fodbc.c, fileio.h: Removed 'dateFormat' as it was unused